feat: add cors detour guide

--- a/src/ui/components/storage-picker/cors-guide/guides/cors-anywhere.mdx
+++ b/src/ui/components/storage-picker/cors-guide/guides/cors-anywhere.mdx
@@ -1,4 +1,11 @@
 import { LocationOrigin } from '../location-origin.tsx';
+import { ThirdPartyCodeWarning, UntestedWarning } from '../warnings.tsx';
+
+<ThirdPartyCodeWarning />
+<UntestedWarning />
+
+## Description
+CORS Anywhere is a proxy, which allows applications to connect arbitrary servers.
 
 ## How-To
 
