--- a/src/ui/components/storage-picker/cors-guide/guides/synology.mdx
+++ b/src/ui/components/storage-picker/cors-guide/guides/synology.mdx
@@ -16,7 +16,7 @@ For Synology, the practical approach is adding CORS behavior on a DSM Reverse Pr
 ```text
 Access-Control-Allow-Origin: https://app.example.com
 Access-Control-Allow-Methods: GET, PUT, POST, DELETE, HEAD, OPTIONS, PROPFIND, MKCOL
-Access-Control-Allow-Headers: Authorization, Content-Type, Depth, Destination, If, If-Match, If-None-Match, Overwrite, Range
+Access-Control-Allow-Headers: Authorization, Content-Type, Depth, Destination, If, If-Match, If-None-Match, If-Unmodified-Since, Overwrite, Range
 Access-Control-Expose-Headers: ETag, Content-Length, Last-Modified, DAV
 Access-Control-Allow-Credentials: true
 ```
