--- a/src/ui/components/storage-picker/cors-guide/guides/nginx.mdx
+++ b/src/ui/components/storage-picker/cors-guide/guides/nginx.mdx
@@ -13,7 +13,7 @@ The method and header set below works for both WebDAV and S3-compatible requests
 1. In the Nginx `http` block, define an origin allowlist:
 
 ```nginx
-map $http_origin $allowed_cors_origin {
+map $http_origin $extra_cors_origin {
   default "";
   "https://app.example.com" $http_origin;
 }
@@ -23,12 +23,18 @@ map $http_origin $allowed_cors_origin {
 
 ```nginx
 location /some-path-to-storage/ {
-  if ($allowed_cors_origin = "") {
-    return 403;
-  }
+  set $extra_cors_preflight "";
 
   if ($request_method = OPTIONS) {
-    add_header Access-Control-Allow-Origin $allowed_cors_origin always;
+    set $extra_cors_preflight "OPTIONS";
+  }
+
+  if ($extra_cors_origin) {
+    set $extra_cors_preflight "${extra_cors_preflight}_ALLOWED";
+  }
+
+  if ($extra_cors_preflight = "OPTIONS_ALLOWED") {
+    add_header Access-Control-Allow-Origin $extra_cors_origin always;
     add_header Access-Control-Allow-Methods "GET, PUT, POST, DELETE, HEAD, OPTIONS, PROPFIND, MKCOL" always;
     add_header Access-Control-Allow-Headers "Authorization, Content-Type, Depth, Destination, If, If-Match, If-None-Match, If-Unmodified-Since, Overwrite, Range, x-amz-content-sha256, x-amz-date, x-amz-security-token, x-amz-user-agent" always;
     add_header Access-Control-Expose-Headers "ETag, Content-Length, Last-Modified, DAV, x-amz-request-id, x-amz-id-2, x-amz-version-id" always;
@@ -37,11 +43,15 @@ location /some-path-to-storage/ {
     return 204;
   }
 
-  add_header Access-Control-Allow-Origin $allowed_cors_origin always;
-  add_header Access-Control-Expose-Headers "ETag, Content-Length, Last-Modified, DAV, x-amz-request-id, x-amz-id-2, x-amz-version-id" always;
-  add_header Access-Control-Allow-Credentials "true" always;
+  if ($extra_cors_origin) {
+    add_header Access-Control-Allow-Origin $extra_cors_origin always;
+    add_header Access-Control-Expose-Headers "ETag, Content-Length, Last-Modified, DAV, x-amz-request-id, x-amz-id-2, x-amz-version-id" always;
+    add_header Access-Control-Allow-Credentials "true" always;
+  }
 
-  proxy_set_header Host $http_host;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_pass http://your-upstream;
 }
